--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <script src="//cdn.polyfill.io/v2/polyfill.min.js"></script>
     <title>Frontend Boilerplate with React and TypeScript</title>
   </head>
   <body>
